// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkSpinner dark mode should disable theming if the required attribute is omitted 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="large"
/>
`;

exports[`iOS BpkSpinner dark mode should render correctly 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="large"
/>
`;

exports[`iOS BpkSpinner dark mode should support the "small" property 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="small"
/>
`;

exports[`iOS BpkSpinner dark mode should support theming 1`] = `
<ActivityIndicator
  color="red"
  size="large"
/>
`;

exports[`iOS BpkSpinner dark mode should support type="dark" 1`] = `
<ActivityIndicator
  color="rgb(84, 88, 96)"
  size="large"
/>
`;

exports[`iOS BpkSpinner dark mode should support type="light" 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="large"
/>
`;

exports[`iOS BpkSpinner dark mode should support type="primary" 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should disable theming if the required attribute is omitted 1`] = `
<ActivityIndicator
  color="rgb(0, 98, 227)"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should render correctly 1`] = `
<ActivityIndicator
  color="rgb(0, 98, 227)"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should support the "small" property 1`] = `
<ActivityIndicator
  color="rgb(0, 98, 227)"
  size="small"
/>
`;

exports[`iOS BpkSpinner light mode should support theming 1`] = `
<ActivityIndicator
  color="red"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should support type="dark" 1`] = `
<ActivityIndicator
  color="rgb(84, 88, 96)"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should support type="light" 1`] = `
<ActivityIndicator
  color="rgb(255, 255, 255)"
  size="large"
/>
`;

exports[`iOS BpkSpinner light mode should support type="primary" 1`] = `
<ActivityIndicator
  color="rgb(0, 98, 227)"
  size="large"
/>
`;
